--- a/server/views/invoice.ejs
+++ b/server/views/invoice.ejs
@@ -474,12 +474,26 @@
                                                                             <%})}%>
                                                             </li>
                         </ul>
-                        <!-- <span <% %>  style="font-size:<%= data.CustomerFont %> ; line-height:<%= data.CustomerLineSpace %>; border: 1px solid <%= data.Color %>; padding: 2px 0px;">You've Saved <%=data.billMaster.DiscountAmount + data.billMaster.AddlDiscount%> Rs on this Invoice!
-                    </span> -->
                     </div>
                 </div>
             </section>
             <!-- improtant note billtotal end -->
+
+            <!-- You've Saved  start -->
+            <% if (data.SavedDiscount !== 0){%>
+            <div style="width: 100%; height: 400px;">
+                <table style="width:30%; float:right">
+                    <thead>
+                        <tr>
+                            <th
+                            <% %>  style="font-size:<%= data.CustomerFont %> ; line-height:<%= data.CustomerLineSpace %>; border: 1px solid <%= data.Color %>; padding: 0px; margin:0px "> You've Saved <%=data.SavedDiscount%> Rs on this Invoice!
+                        </th>
+                        </tr>
+                    </thead>
+                </table>
+            </div>
+            <%}%>
+              <!-- You've Saved  end -->
 </body>
 
 </html>
