--- a/server/views/invoice.ejs
+++ b/server/views/invoice.ejs
@@ -61,9 +61,9 @@
                                     <li>
                                         <%= data.invoiceNo %>
                                     </li>
-                                    <li>Cust_ID</li>
                                     <li>Name</li>
-                                    <li>MobileNo1</li>
+                                    <li>Mobile No</li>
+                                    <li>Sale Person</li>
                         </ul>
                         <ul class="ul2" <% %> style="font-size:<%= data.CustomerFont %> ; line-height:<%=
                                     data.CustomerLineSpace %>;">
@@ -71,13 +71,13 @@
                                         <%=data.billMaster.InvoiceNo%>
                                     </li>
                                     <li>
-                                        <%=data.customer.Idd%>
-                                    </li>
-                                    <li>
                                         <%=data.customer.Name%>
                                     </li>
                                     <li>
                                         <%=data.customer.MobileNo1%>
+                                    </li>
+                                    <li>
+                                        <%=data.employee%>
                                     </li>
                         </ul>
                     </div>
@@ -93,7 +93,7 @@
                                     <li>Del. Date</li>
                                     <li>Rx BY</li>
                                     <li>GSTNo</li>
-                                    <li>Sale Person</li>
+                                   
                         </ul>
                         <ul class="ul2" <% %> style="font-size:<%= data.CustomerFont %> ; line-height:<%=
                                     data.CustomerLineSpace %>;">
@@ -109,9 +109,7 @@
                                     <li>
                                         <%=data.customer.GSTNo%>
                                     </li>
-                                    <li>
-                                        <%=data.employee%>
-                                    </li>
+                                   
 
                         </ul>
                     </div>
