--- a/web1/src/app/sale/old-bill-list/old-bill-list.component.html
+++ b/web1/src/app/sale/old-bill-list/old-bill-list.component.html
@@ -18,6 +18,9 @@
                   <div class="col-xl-3 col-lg-2 col-md-2 col-6 p-0 ms-md-3 ms-2">
                     <h2>Shop Name - <b style="color: #000;">{{this.CustomerData.ShopName}} ({{this.CustomerData.AreaName}})</b> </h2>
                   </div>
+                  <div class="col-xl-3 col-lg-2 col-md-2 col-6 p-0 ms-md-3 ms-2">
+                    <h2>totalGrandTotal - <b style="color: #000;">{{this.totalGrandTotal}}</b> </h2>
+                  </div>
                 </div>
               </div>
 
@@ -56,8 +59,6 @@
                                 <td >{{datas.Amount}} </td>
                             </tr>
                           <tr class="text-center" style="border-top: 2px solid red;color: red;">
-                            <th >Bill No.</th>
-                            <th >S.No</th>
                             <th >BillDate</th>
                             <th >DeliveryDate</th>
                             <th >Qty</th>
@@ -67,10 +68,10 @@
                             <th >Additional Dis%</th>
                             <th >Additional DisAmt</th>
                             <th >GrandTotal</th>
+                            <th >Paid</th>
+                            <th >Balance</th>
                           </tr>
                           <tr class="text-center"  style="white-space: nowrap; border-bottom: 1px solid red;">
-                          <td >{{data.BillNo}}</td>
-                          <td >{{data.SerialNo }}</td>
                           <td >{{data.BillDate}}</td>
                           <td >{{data.DeliveryDate}}</td>
                           <td >{{data.Qty}}</td>
@@ -80,6 +81,8 @@
                           <td >{{data.AdditionalDiscountPercentage}} </td>
                           <td >{{data.AdditionalDiscount}} </td>
                           <td >{{data.GrandTotal}} </td>
+                          <td >{{data.Paid}} </td>
+                          <td >{{data.Balance}} </td>
                         </tr>
                        
                         </thead>
