--- a/web1/src/app/sale/old-bill-list/old-bill-list.component.html
+++ b/web1/src/app/sale/old-bill-list/old-bill-list.component.html
@@ -19,7 +19,7 @@
                     <h2>Shop Name - <b style="color: #000;">{{this.CustomerData.ShopName}} ({{this.CustomerData.AreaName}})</b> </h2>
                   </div>
                   <div class="col-xl-3 col-lg-2 col-md-2 col-6 p-0 ms-md-3 ms-2">
-                    <h2>totalGrandTotal - <b style="color: #000;">{{this.totalGrandTotal}}</b> </h2>
+                    <h2>Total - <b style="color: #000;">{{this.totalGrandTotal}}</b> </h2>
                   </div>
                 </div>
               </div>
