--- a/web1/src/app/common/common.component.html
+++ b/web1/src/app/common/common.component.html
@@ -169,6 +169,7 @@
               <a *ngIf="viewFlag.viewInventoryExcelImport" href="javascript:void(0)" [routerLink]="['/uploader/purchase']" id="collapseExample8" >Inventory</a>
               <a *ngIf="user?.is_direct === true " href="javascript:void(0)" [routerLink]="['/uploader/customer']" id="collapseExample8" >Customer</a>
               <a *ngIf="user?.is_direct === true" href="javascript:void(0)" [routerLink]="['/uploader/bill']" id="collapseExample8" >Bill</a>
+              <a  href="javascript:void(0)" [routerLink]="['/uploader/supplier-uploader']" id="collapseExample8" >Supplier</a>
             </div>
           </div>
           <!-- companyadmin end Uploader -->
