--- a/web1/src/app/sale/bill/bill.component.html
+++ b/web1/src/app/sale/bill/bill.component.html
@@ -1,3 +1,4 @@
+<section *ngIf="this.editCustomerView === true">
 <div class="card">
     <div class="header">
         <div class="row">
@@ -1530,3 +1531,4 @@
         </div>
     </div>
 </ng-template>
+</section>
