--- a/web1/src/app/admin/sms-setting/sms-setting.component.html
+++ b/web1/src/app/admin/sms-setting/sms-setting.component.html
@@ -1,1 +1,17 @@
-<p>sms-setting works!</p>
+<section class="content">
+    <div class="container-fluid">
+        <div class="block-header"></div>
+        <div class="row clearfix">
+            <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12">
+                <div class="card " style="padding-left: 15px;">
+                    <div class="header">
+                        <h2>Sms Setting</h2>
+                    </div>
+                    <div class="body">
+                       
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
