--- a/web1/src/app/admin/reminder/reminder.component.html
+++ b/web1/src/app/admin/reminder/reminder.component.html
@@ -9,8 +9,9 @@
                     </div>
                     <div class="body">
                        <div class="row">
+                          <!-- Birthday -->
                           <div class="col-xl-4 col-lg-6  col-md-12 col-12">
-                            <div class="crad " style="border: 2px solid #ff5100 ; border-radius: 10px; ">
+                            <div class="crad bgmB" style="border: 2px solid #ff5100 ; border-radius: 10px; ">
                                 <div class="row">
                                     <div class="col-6"> <h1 class="text-center m-0 titalName" >   <img src="../../../assets/images/bdayicon.png" alt="" srcset="" width="10%"> Birthday</h1></div>
                                     <div class="col-6 text-center titalName2">
@@ -35,9 +36,11 @@
                                                 </thead>
                                                 <tbody>
                                                     <tr>
-                                                        <td style="background-color: #1e2672; width:25%;"><i class="fa-brands fa-whatsapp fa-flip fa-2xl" style="color: #ffffff;"></i> 
-                                                            <i class="fa-solid fa-comment-sms fa-flip fa-2xl ms-md-3 me-md-3 ms-1 me-1" style="color: #ffffff;"></i> 
-                                                            <i class="fa-regular fa-envelope fa-flip fa-2xl" style="color: #ffffff;"></i></td>
+                                                        <td style="background-color: #1e2672; width:25%;">
+                                                            <i class="fa-brands fa-whatsapp fa-flip fa-2xl whatsappIocn"></i> 
+                                                            <i class="fa-solid fa-comment-sms fa-flip fa-2xl ms-md-3 me-md-3 ms-1 me-1 smsIocn"></i> 
+                                                            <i class="fa-regular fa-envelope fa-flip fa-2xl emailIocn"></i>
+                                                        </td>
                                                         <td>SNo</td>
                                                         <td>Name</td>
                                                         <td>Mobile</td>
@@ -123,7 +126,210 @@
                                 </mat-tab-group>
                           </div>
                           </div>
+                          <!-- Birthday -->
+                          <!-- Anniversary -->
+                          <div class="col-xl-4 col-lg-6  col-md-12 col-12">
+                            <div class="crad bgmA" style="border: 2px solid #ff5100 ; border-radius: 10px; ">
+                                <div class="row">
+                                    <div class="col-6"> <h1 class="text-center m-0 titalName" >   <img src="../../../assets/images/AnniversaryIcon.png" alt="" srcset="" width="10%"> Anniversary</h1></div>
+                                    <div class="col-6 text-center titalName2">
+                                        <button class="itme_button">Yestreday</button>
+                                        <button class="itme_button1 ms-2 me-2">Today</button>
+                                        <button class="itme_button2">Tomorrow</button> 
+                                    </div>
+                                </div>
+                                <mat-tab-group> 
+
+                                    <mat-tab label="Customer" >
+                                        <div class="col-12 " style="overflow: auto; height: 153px; margin-top: 15px;">
+                                            <table class="table  ">
+                                                <thead class="thead-light">
+                                                    <tr>
+                                                        <th>Action</th>
+                                                        <th>SNo</th>
+                                                        <th>Name</th>
+                                                        <th>Mobile</th>
+                                                        <th>Date</th>
+                                                    </tr>
+                                                </thead>
+                                                <tbody>
+                                                    <tr>
+                                                        <td style="background-color: #1e2672; width:25%;">
+                                                            <i class="fa-brands fa-whatsapp fa-flip fa-2xl whatsappIocn"></i> 
+                                                            <i class="fa-solid fa-comment-sms fa-flip fa-2xl ms-md-3 me-md-3 ms-1 me-1 smsIocn"></i> 
+                                                            <i class="fa-regular fa-envelope fa-flip fa-2xl emailIocn"></i>
+                                                        </td>
+                                                        <td>SNo</td>
+                                                        <td>Name</td>
+                                                        <td>Mobile</td>
+                                                        <td>Date</td>
+                                                    </tr>
+                                                </tbody>
+                                            </table>
+
+                                        </div>
+                                    </mat-tab>
+                                    <mat-tab label="Supplier">
+                                        <div class="col-12 " style="overflow: auto; height: 153px; margin-top: 15px;">
+                                            <table class="table  ">
+                                                <thead class="thead-light">
+                                                    <tr>
+                                                        <th>Action</th>
+                                                        <th>SNo</th>
+                                                        <th>Name</th>
+                                                        <th>Mobile</th>
+                                                        <th>Date</th>
+                                                    </tr>
+                                                </thead>
+                                                <tbody>
+                                                
+                                                </tbody>
+                                            </table>
+                                        </div>
+                                    </mat-tab>
+                                    <mat-tab label="Employee">
+                                        <div class="col-12 " style="overflow: auto; height: 153px; margin-top: 15px;">
+                                            <table class="table  ">
+                                                <thead class="thead-light">
+                                                    <tr>
+                                                        <th>Action</th>
+                                                        <th>SNo</th>
+                                                        <th>Name</th>
+                                                        <th>Mobile</th>
+                                                        <th>Date</th>
+                                                    </tr>
+                                                </thead>
+                                                <tbody>
+                                                  
+                                                </tbody>
+                                            </table>
+                                        </div>
+                                    </mat-tab>
+                                    <mat-tab label="Fitter">
+                                        <div class="col-12 " style="overflow: auto; height: 153px; margin-top: 15px;">
+                                            <table class="table  ">
+                                                <thead class="thead-light">
+                                                    <tr>
+                                                        <th>Action</th>
+                                                        <th>SNo</th>
+                                                        <th>Name</th>
+                                                        <th>Mobile</th>
+                                                        <th>Date</th>
+                                                    </tr>
+                                                </thead>
+                                                <tbody>
+                                                
+                                                </tbody>
+                                            </table>
+                                        </div>
+                                    </mat-tab>
+                                    <mat-tab label="Doctor">
+                                        <div class="col-12 " style="overflow: auto; height: 153px; margin-top: 15px;">
+                                            <table class="table  ">
+                                                <thead class="thead-light">
+                                                    <tr>
+                                                        <th>Action</th>
+                                                        <th>SNo</th>
+                                                        <th>Name</th>
+                                                        <th>Mobile</th>
+                                                        <th>Date</th>
+                                                    </tr>
+                                                </thead>
+                                                <tbody>
+                                                   
+                                                </tbody>
+                                            </table>
+                                        </div>
+                                    </mat-tab>
+                                </mat-tab-group>
+                          </div>
+                          </div>
+                          <!-- Anniversary -->
+                          <!-- Customer Order Pending -->
+                          <div class="col-xl-4 col-lg-6  col-md-12 col-12">
+                            <div class="crad bgmO" style="border: 2px solid #ff5100 ; border-radius: 10px; ">
+                                <div class="row">
+                                    <div class="col-6"> <h1 class="text-center m-0 titalName" >   <img src="../../../assets/images/orderIcon.png" alt="" srcset="" width="10%"> Cust_Order Pending</h1></div>
+                                    <div class="col-6 text-center titalName2">
+                                        <button class="itme_button">Yestreday</button>
+                                        <button class="itme_button1 ms-2 me-2">Today</button>
+                                        <button class="itme_button2">Tomorrow</button> 
+                                    </div>
+                                </div>
+                                <div class="col-12 " style="overflow: auto; height: 203px; margin-top: 15px;">
+                                <table class="table  ">
+                                    <thead class="thead-light">
+                                        <tr>
+                                            <th>Action</th>
+                                            <th>SNo</th>
+                                            <th>BillID</th>
+                                            <th>Cust_Name</th>
+                                            <th>Mobile</th>
+                                            <th>Date</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        <tr>
+                                            <td style="background-color: #1e2672; width:25%;">
+                                                <i class="fa-brands fa-whatsapp fa-flip fa-2xl whatsappIocn"></i> 
+                                                <i class="fa-solid fa-comment-sms fa-flip fa-2xl ms-md-3 me-md-3 ms-1 me-1 smsIocn"></i> 
+                                                <i class="fa-regular fa-envelope fa-flip fa-2xl emailIocn"></i>
+                                            </td>
+                                            <td>SNo</td>
+                                            <td>i</td>
+                                            <td>vinay</td>
+                                            <td>8770303677</td>
+                                            <td>02-02-2020</td>
+                                        </tr>
+                                    </tbody>
+                                </table>
+                                </div>
+                          </div>
+                          </div>
+                          <!-- Customer Order Pending -->
                        </div>
+                       <div class="row mt-5">
+                        <!-- Eye Testing -->
+                        <div class="col-xl-4 col-lg-6  col-md-12 col-12">
+                          <div class="crad bgmE" style="border: 2px solid #ff5100 ; border-radius: 10px; ">
+                              <div class="row">
+                                  <div class="col-6"> <h1 class="text-center m-0 titalName" >   <img src="../../../assets/images/eyeIcon.png" alt="" srcset="" width="10%"> Eye Testing</h1></div>
+                                  <div class="col-6 text-center titalName2">
+                                      <button class="itme_button">Yestreday</button>
+                                      <button class="itme_button1 ms-2 me-2">Today</button>
+                                      <button class="itme_button2">Tomorrow</button> 
+                                  </div>
+                              </div>
+                              <div class="col-12 " style="overflow: auto; height: 203px; margin-top: 15px;"> 
+                              <table class="table  ">
+                                  <thead class="thead-light">
+                                      <tr>
+                                          <th>Action</th>
+                                          <th>SNo</th>
+                                          <th>Cus_Name</th>
+                                          <th>Mobile</th>
+                                          <th>ExpiryDate</th>
+                                      </tr>
+                                  </thead>
+                                  <tbody>
+                                      <tr>
+                                          <td style="background-color: #1e2672; width:25%;">
+                                              <i class="fa-brands fa-whatsapp fa-flip fa-2xl whatsappIocn"></i> 
+                                              <i class="fa-solid fa-comment-sms fa-flip fa-2xl ms-md-3 me-md-3 ms-1 me-1 smsIocn"></i> 
+                                              <i class="fa-regular fa-envelope fa-flip fa-2xl emailIocn"></i>
+                                          </td>
+                                          <td>i</td>
+                                          <td>vinay</td>
+                                          <td>8770303677</td>
+                                          <td>02-02-2020</td>
+                                      </tr>
+                                  </tbody>
+                              </table>
+                              </div>
+                        </div>
+                        </div>
+                        <!-- Eye Testing -->
+                        </div>
                     </div>
                 </div>
             </div>
